--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 </head>
 <body>
-		<header>
+		<header class="header">
 			<!--DEBUT BULLES-->
 			<div class="bgImage"></div>
 			<svg class="blobCont">
@@ -23,13 +23,13 @@
 									<circle class="blob" cx="50%" cy="10%" r="40" fill="white" stroke="white"/>
 									<circle class="blob" cx="17%" cy="15%" r="70" fill="white" stroke="white"/>
 									<circle class="blob" cx="90%" cy="20%" r="120" fill="white" stroke="white"/>
-									<circle class="blob" cx="30%" cy="25%" r="30" fill="white" stroke="white"/>
+									<circle class="blob" cx="30%" cy="25%" r="60" fill="white" stroke="white"/>
 				          <circle class="blob" cx="50%" cy="60%" r="80" fill="white" stroke="white"/>
-									<circle class="blob" cx="70%" cy="90%" r="10" fill="white" stroke="white"/>
+									<circle class="blob" cx="70%" cy="90%" r="50" fill="white" stroke="white"/>
 									<circle class="blob" cx="90%" cy="60%" r="90" fill="white" stroke="white"/>
 									<circle class="blob" cx="30%" cy="90%" r="80" fill="white" stroke="white"/>
 				          <circle class="blob" cx="10%" cy="10%" r="80" fill="white" stroke="white"/>
-									<circle class="blob" cx="50%" cy="10%" r="20" fill="white" stroke="white"/>
+									<circle class="blob" cx="50%" cy="10%" r="30" fill="white" stroke="white"/>
 									<circle class="blob" cx="17%" cy="15%" r="70" fill="white" stroke="white"/>
 									<circle class="blob" cx="40%" cy="20%" r="120" fill="white" stroke="white"/>
 									<circle class="blob" cx="30%" cy="25%" r="30" fill="white" stroke="white"/>
@@ -37,6 +37,7 @@
 									<circle class="blob" cx="17%" cy="10%" r="100" fill="white" stroke="white"/>
 									<circle class="blob" cx="40%" cy="60%" r="90" fill="white" stroke="white"/>
 									<circle class="blob" cx="10%" cy="50%" r="80" fill="white" stroke="white"/>
+							<circle class="blob" cx="" cy="" r="150" fill="white" stroke="white"/>
 						</g>
 					</mask>
 					<filter id="gooey" height="130%">
@@ -64,7 +65,11 @@
 					Menu
 				</a>
 			</nav>
-			<!--DEBUT NAV CIRCULAIRE-->
+
+			<h1 style="z-index: 1000">
+				Yacine FETHI
+			</h1>
+			<!--FIN NAV CIRCULAIRE-->
 
 			<!--<section class="section" id="home">
 				<nav class="header__nav">
