background cursor attachement done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<circle class="blob" cx="17%" cy="10%" r="100" fill="white" stroke="white"/>
 									<circle class="blob" cx="40%" cy="60%" r="90" fill="white" stroke="white"/>
 									<circle class="blob" cx="10%" cy="50%" r="80" fill="white" stroke="white"/>
-							<circle class="blob" cx="" cy="" r="150" fill="white" stroke="white"/>
+							<circle class="blob"  r="150" fill="white" stroke="white"/>
 						</g>
 					</mask>
 					<filter id="gooey" height="130%">
@@ -66,7 +66,7 @@
 				</a>
 			</nav>
 
-			<h1 style="z-index: 1000">
+			<h1 style="z-index: 1000; margin: 0;">
 				Yacine FETHI
 			</h1>
 			<!--FIN NAV CIRCULAIRE-->
@@ -124,6 +124,7 @@
 	<script src="js/menu.js"></script>
     <script src="js/wow.min.js"></script>
 	<script src="js/jquery.js"></script>
+	<script src="js/bulles.js"></script>
 	<script src="js/script.js"></script>
 	<script type="text/javascript">
 		
