--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/menu.css" />
 	<link rel="stylesheet" type="text/css" href="css/bulles.css" />
 	<link rel="stylesheet" type="text/css" href="css/arrow.css" />
+	<link rel="stylesheet" type="text/css" href="css/skillbar.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
 	
@@ -85,49 +86,90 @@
 						<i class="fas fa-arrow-down"></i>
 					</a>
 				</div>
-				
 			</div>
-			
-
-			<!--<section class="section" id="home">
-				<nav class="header__nav">
-	                <ul class="header__nav__menu">
-	                    <li class="header__nav__list">
-	                        <a class="header__nav__link header__nav__link--active" href="#home">Accueil</a>
-	                    </li>
-	                    <li class="header__nav__list">
-	                        <a class="header__nav__link" href="#about"><i class="fa fa-fw fa-user-o" aria-hidden="true"></i>A propos de moi</a>
-	                    </li>
-	                    <li class="header__nav__list">
-	                        <a class="header__nav__link" href="#skills"><i class="fa fa-fw fa-code" aria-hidden="true"></i>Compétences</a>
-	                    </li>
-	                    <li class="header__nav__list">
-	                        <a class="header__nav__link" href="#works"><i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>Réalisations</a>
-	                    </li>
-	                    <li class="header__nav__list">
-	                        <a class="header__nav__link" href="#contact"><i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>Contact</a>
-	                    </li>
-	                </ul>
-
-	                <div class="dropdown hidden">
-	                    <i class="fa fa-bars dropbtn" aria-hidden="true"></i>
-	                    <div id="myDropdown" class="dropdown__content">
-	                     
-	                    </div>
-	                </div>
-
-	            </nav>
-			</section>-->
 		</header>
-		<section class="section" id="about" style="height: 100vh; background-color: blue;">
-			
+
+		<section class="section about" id="about">
+			<div style="width: 100%;height: 1px; background-color: black;"></div>
+			<div>
+				<h1 class="wow fadeInDown"><i class="fas fa-info-circle"></i> À propos</h1>
+				<div class="inline">
+					<img class="wow fadeInLeft" src="https://via.placeholder.com/400x500">
+				</div>
+				<div class="inline p">
+					<p class="wow fadeInRight">
+						Un bac STMG spécialité gestion et finances en poche depuis 2014, je me suis réorienté au milieu de ma 2ème année de BTS Comptabilité vers le milieu du web. Je suis aujourd'hui étudiant au sein de <a style="color: #47B579; text-decoration: none;" href="https://www.ecole-multimedia.com/">l'École Multimédia</a> à Paris. Je maîtrise les principaux langages du web (HTML/CSS , Jasvascript, PHP) et quelques frameworks. Je suis actuellement à la recherche d'entreprise avoir un contrat en alternance pour 3ème et dernière année avant le diplôme de dévoloppeur multimédia.
+					</p>
+				</div>
+			</div>
+			<div style="width: 100%;height: 1px; background-color: black; margin-top: 10vh;"></div>
 		</section>
-		<section class="section" id="skills" style="height: 100vh; background-color: red;">
-			
+
+		<section class="section skills" id="skills">
+			<div class="bgblue" style="background-color: #1111678f;">
+				<div style="width: 100%;height: 1px;"></div>
+				<div>
+					<h1 class="wow fadeInDown"><i class="fas fa-info-circle"></i> Compétences</h1>
+					<div class="skillbar clearfix wow fadeInLeft" data-percent="90%">
+						<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">90%</div>
+					</div> <!-- End Skill Bar -->
+
+					<div class="skillbar clearfix wow fadeInRight" data-percent="80%">
+						<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+						<div class="skillbar-bar" style="background: #3498db;"></div>
+						<div class="skill-bar-percent">80%</div>
+					</div> <!-- End Skill Bar -->
+
+					<div class="skillbar clearfix wow fadeInLeft" data-percent="70%">
+						<div class="skillbar-title" style="background: #2c3e50;"><span>Javascript</span></div>
+						<div class="skillbar-bar" style="background: #2c3e50;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+
+					<div class="skillbar clearfix wow fadeInRight" data-percent="70%">
+						<div class="skillbar-title" style="background: #333333;"><span>jQuery</span></div>
+						<div class="skillbar-bar" style="background: #525252;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+
+					<div class="skillbar clearfix wow fadeInLeft" data-percent="50%">
+						<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
+						<div class="skillbar-bar" style="background: #5a68a5;"></div>
+						<div class="skill-bar-percent">40%</div>
+					</div> <!-- End Skill Bar -->
+
+					<div class="skillbar clearfix wow fadeInRight" data-percent="75%">
+						<div class="skillbar-title" style="background: #27ae60;"><span>SQL</span></div>
+						<div class="skillbar-bar" style="background: #2ecc71;"></div>
+						<div class="skill-bar-percent">75%</div>
+					</div> <!-- End Skill Bar -->
+				</div>
+				<div style="width: 100%;height: 1px; margin-top: 10vh"></div>
+			</div>
 		</section>
+
 		<section class="section" id="works" style="height: 100vh; background-color: purple;">
-			<div class="wow fadeInRight">
-				<input type="text" name="texte">
+			<h1 class="title">Hover over the cards</h1>
+
+			<div id="app" class="container">
+			  <card data-image="https://images.unsplash.com/photo-1479660656269-197ebb83b540?dpr=2&auto=compress,format&fit=crop&w=1199&h=798&q=80&cs=tinysrgb&crop=">
+			    <h1 slot="header">Canyons</h1>
+			    <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			  </card>
+			  <card data-image="https://images.unsplash.com/photo-1479659929431-4342107adfc1?dpr=2&auto=compress,format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=">
+			    <h1 slot="header">Beaches</h1>
+			    <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			  </card>
+			  <card data-image="https://images.unsplash.com/photo-1479644025832-60dabb8be2a1?dpr=2&auto=compress,format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=">
+			    <h1 slot="header">Trees</h1>
+			    <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			  </card>
+			  <card data-image="https://images.unsplash.com/photo-1479621051492-5a6f9bd9e51a?dpr=2&auto=compress,format&fit=crop&w=1199&h=811&q=80&cs=tinysrgb&crop=">
+			    <h1 slot="header">Lakes</h1>
+			    <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			  </card>
 			</div>
 		</section>
 		<section class="section" id="contact" style="height: 100vh; background-color: yellow;">
@@ -136,12 +178,13 @@
 		<a id="to-top" class="top">
 	        <i class="fa fa-angle-double-up" aria-hidden="true"></i>
 	    </a>
-	<script src="js/menu.js"></script>
-    <script src="js/wow.min.js"></script>
 	<script src="js/jquery.js"></script>
+    <script src="js/wow.min.js"></script>
+	<script src="js/menu.js"></script>
 	<script src="js/bulles.js"></script>
 	<script src="js/typing.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/skillbar.js"></script>
 	<script type="text/javascript">
 		
 	</script>
