--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div>
 				<h1 class="wow fadeInDown"><i class="fas fa-info-circle"></i> À propos</h1>
 				<div class="inline">
-					<img class="wow fadeInLeft" src="https://via.placeholder.com/400x500">
+					<img class="wow fadeInLeft" src="https://via.placeholder.com/300x500">
 				</div>
 				<div class="inline p">
 					<p class="wow fadeInRight">
@@ -111,44 +111,54 @@
 		<section class="section skills" id="skills">
 			<div class="bgblue" style="background-color: #1111678f;">
 				<div style="width: 100%;height: 1px;"></div>
-				<div>
-					<h1 class="wow fadeInDown"><i class="fas fa-info-circle"></i> Compétences</h1>
+				<h1 class="wow fadeInDown"><i class="fas fa-info-circle"></i> Compétences</h1>
+				<div class="col-md-12">
 					<div class="skillbar clearfix wow fadeInLeft" data-percent="90%">
 						<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #e67e22;"></div>
 						<div class="skill-bar-percent">90%</div>
-					</div> <!-- End Skill Bar -->
+					</div>
+				</div> <!-- End Skill Bar -->
 
+				<div class="col-md-12">
 					<div class="skillbar clearfix wow fadeInRight" data-percent="80%">
 						<div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #3498db;"></div>
 						<div class="skill-bar-percent">80%</div>
-					</div> <!-- End Skill Bar -->
+					</div>
+				</div> <!-- End Skill Bar -->
 
+				<div class="col-md-12">
 					<div class="skillbar clearfix wow fadeInLeft" data-percent="70%">
 						<div class="skillbar-title" style="background: #2c3e50;"><span>Javascript</span></div>
 						<div class="skillbar-bar" style="background: #2c3e50;"></div>
 						<div class="skill-bar-percent">70%</div>
-					</div> <!-- End Skill Bar -->
+					</div>
+				</div> <!-- End Skill Bar -->
 
+				<div class="col-md-12">
 					<div class="skillbar clearfix wow fadeInRight" data-percent="70%">
 						<div class="skillbar-title" style="background: #333333;"><span>jQuery</span></div>
 						<div class="skillbar-bar" style="background: #525252;"></div>
 						<div class="skill-bar-percent">70%</div>
-					</div> <!-- End Skill Bar -->
+					</div>
+				</div> <!-- End Skill Bar -->
 
-					<div class="skillbar clearfix wow fadeInLeft" data-percent="50%">
+				<div class="col-md-12">
+					<div class="skillbar clearfix wow fadeInLeft" data-percent="40%">
 						<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
 						<div class="skillbar-bar" style="background: #5a68a5;"></div>
 						<div class="skill-bar-percent">40%</div>
-					</div> <!-- End Skill Bar -->
+					</div>
+				</div> <!-- End Skill Bar -->
 
+				<div class="col-md-12">
 					<div class="skillbar clearfix wow fadeInRight" data-percent="75%">
 						<div class="skillbar-title" style="background: #27ae60;"><span>SQL</span></div>
 						<div class="skillbar-bar" style="background: #2ecc71;"></div>
 						<div class="skill-bar-percent">75%</div>
-					</div> <!-- End Skill Bar -->
-				</div>
+					</div>
+				</div><!-- End Skill Bar -->
 				<div style="width: 100%;height: 1px; margin-top: 10vh"></div>
 			</div>
 		</section>
@@ -156,26 +166,40 @@
 		<section class="section works" id="works">
 			<div style="width: 100%;height: 1px; background-color: black;"></div>
 			<h1 class="h1 wow fadeInDown"><i class="fas fa-check-circle"></i> Réalisations</h1>
-			<div></div>
-			<div class="wrapper">
-			    <div class="card"><img src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
-			        <div class="info">
-			            <h1>Mountain</h1>
-			            <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p><button>Read More</button>
-			        </div>
-			    </div>
-			    <div class="card"><img src="https://images.unsplash.com/photo-1425342605259-25d80e320565?auto=format&amp;fit=crop&amp;w=750&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
-			        <div class="info">
-			            <h1>Road</h1>
-			            <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p><button>Read More</button>
-			        </div>
-			    </div>
-			    <div class="card"><img src="https://images.unsplash.com/photo-1503249023995-51b0f3778ccf?auto=format&amp;fit=crop&amp;w=311&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
-			        <div class="info">
-			            <h1>Protester</h1>
-			            <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p><button>Read More</button>
-			        </div>
-			    </div>
+			<div class="container-fluid">
+				<div class="wrapper row">
+					<div class="col-md-4">
+					    <div class="card"><img src="assets/cp.png"/>
+					        <div class="info">
+					            <h1>Circular Pong</h1>
+					            <p>Une variante du premier jeu-vidéo mythique PONG</p><a href="works/Circular-PONG/index.html"><button>Jouer</button></a>
+					        </div>
+					    </div>
+					</div>
+				    <div class="col-md-4">
+					    <div class="card"><img src="assets/gd.png" />
+					        <div class="info">
+					            <h1>Gold Digger</h1>
+					            <p>Un petit jeu de 3 niveaux fait par 2 dev débutants et 2 graphistes débutants</p><a href="works/GoldDigger/index.html"><button>Jouer</button></a>
+					        </div>
+					    </div>
+					</div>
+				    <div class="col-md-4">
+					    <div class="card"><img src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+					        <div class="info">
+					            <h1>Robin Cook</h1>
+					            <p>Petit de jeu de 5 niveaux où l'on doit éviter les monstres et les projectiles</p><a href="works/Robin-Cook/index.html"><button>Jouer</button></a>
+					        </div>
+					    </div>
+					</div><div class="col-md-4">
+					    <div class="card"><img src="https://images.unsplash.com/photo-1477666250292-1419fac4c25c?auto=format&amp;fit=crop&amp;w=667&amp;q=80&amp;ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" />
+					        <div class="info">
+					            <h1>Mountain</h1>
+					            <p>Lorem Ipsum is simply dummy text from the printing and typeseting industry</p><button>Read More</button>
+					        </div>
+					    </div>
+					</div>
+				</div>
 			</div>
 		</section>
 
